--- a/static/stat501/note_stat501.html
+++ b/static/stat501/note_stat501.html
@@ -920,11 +920,14 @@ comp
 <h3>2 The Polya-Gamma distribution</h3>
 <div id="the-case-pgb0" class="section level4">
 <h4>2.1. The Case <span class="math inline">\(PG(b,0)\)</span></h4>
+<p>The <span class="math inline">\(PG(b,0)\)</span> class of distributions is closely related to a subset of distributions that are surveyed by Biane, Pitman, and Yor (2001). This family of distributions, which we denote by <span class="math inline">\(J^\star(b), b&gt;0\)</span>, has close connections with <span style="color: red;">the Jacobi Theta and Riemann Zeta functions, and with Brownian excursions</span>. Its Laplace transform is</p>
+<p><span class="math display">\[E[\exp(-tJ^\star(b))]=\cosh^{-b}\sqrt{2t}\quad (4)\]</span></p>
+<p>implying that <span class="math inline">\(PG(b,0)\overset{\mathcal{D}}{=}\frac14J^\star(b)\)</span></p>
 </div>
 <div id="the-general-pgbc-class" class="section level4">
 <h4>2.2. The General <span class="math inline">\(PG(b,c)\)</span> Class</h4>
 <p><span class="math display">\[p(x|b,c)=\frac{\exp(-\frac{c^2}2x) p(x|b,0)}{E[\exp x(-\frac{c^2}2\omega)]}\quad (5)\]</span></p>
-<p>where $p(x|b,0) $is the density of an <span class="math inline">\(\omega\sim PG(b,0)\)</span> random variable.</p>
+<p>where <span class="math inline">\(p(x|b,0)\)</span> is the density of an <span class="math inline">\(\omega\sim PG(b,0)\)</span> random variable.</p>
 </div>
 </div>
 <div id="a-data-augmentation-strategy" class="section level3">
