--- a/static/stat501/note_stat501.html
+++ b/static/stat501/note_stat501.html
@@ -363,32 +363,17 @@ summary {
 
 <h1 class="title toc-ignore">Statistical Literature and Problems</h1>
 <h3 class="subtitle">STAT 501</h3>
-<h4 class="date">07 July, 2020</h4>
+<h4 class="date">15 July, 2020</h4>
 
 </div>
 
 
 <div id="section" class="section level1 tabset tabset-fade tabset-pills">
 <h1></h1>
-<div id="taylor-rodríguez-et-al-2017" class="section level2">
-<h2>(Taylor-Rodríguez et al, 2017)</h2>
-<div id="introduction" class="section level3">
-<h3>1 Introduction</h3>
-</div>
-<div id="inference-for-a-single-model" class="section level3">
-<h3>2 Inference for a single model</h3>
-<div id="the-occupancy-model-with-probit-link" class="section level4">
-<h4>2.1 The occupancy model with Probit link</h4>
-</div>
-<div id="an-objective-prior-for-α-λ" class="section level4">
-<h4>2.2 An objective prior for (α, λ)</h4>
-</div>
-</div>
-</div>
 <div id="albert-chib-1993" class="section level2">
 <h2>(Albert &amp; Chib, 1993)</h2>
-<p>James H. Albert &amp; Siddhartha Chib (1993) Bayesian Analysis of Binary and Polychotomous Response Data, Journal of the American Statistical Association, 88:422, 669-679, DOI: 10.1080/01621459.1993.10476321</p>
-<div id="introduction-1" class="section level3">
+<p>James H. Albert &amp; Siddhartha Chib (1993) Bayesian Analysis of Binary and Polychotomous Response Data, Journal of the American Statistical Association, 88:422, 669-679, <a href="https://doi.org/10.1080/01621459.1993.10476321">DOI: 10.1080/01621459.1993.10476321</a></p>
+<div id="introduction" class="section level3">
 <h3>1 Introduction</h3>
 <p><span class="math inline">\(Y_1,..,Y_n\sim Bern(p_i)\)</span>. <span class="math inline">\(\beta_{k\times1}\)</span> unknown vector of parameters. <span class="math inline">\(X_i^T=(X_{i1},..,X_{ik})\)</span> known covariates.</p>
 <p><span class="math inline">\(p_i=H(\mathbf{x}_i^T\boldsymbol{\beta})\)</span>. <span class="math inline">\(H(\cdot)\)</span> is a known CDF with linear structure <span class="math inline">\(\mathbf{x}_i^T\boldsymbol{\beta}\)</span></p>
@@ -430,7 +415,7 @@ summary {
 </div>
 <div id="data-augmentation-and-gibbs-sampling" class="section level3">
 <h3>3 Data augmentation and Gibbs sampling</h3>
-<div id="introduction-2" class="section level4">
+<div id="introduction-1" class="section level4">
 <h4>3.1 Introduction</h4>
 <p><span class="math display">\[
 \begin{align} 
@@ -922,8 +907,8 @@ comp
 </div>
 <div id="polson-etal-2013" class="section level2">
 <h2>(Polson etal, 2013)</h2>
-<p>Nicholas G. Polson, James G. Scott &amp; Jesse Windle (2013) Bayesian Inference for Logistic Models Using Pólya–Gamma Latent Variables, Journal of the American Statistical Association, 108:504, 1339-1349, <a href="https://www-tandfonline-com/doi/full/10.1080/01621459.2013.829001">DOI: 10.1080/01621459.2013.829001</a></p>
-<div id="introduction-3" class="section level3">
+<p>Nicholas G. Polson, James G. Scott &amp; Jesse Windle (2013) Bayesian Inference for Logistic Models Using Pólya–Gamma Latent Variables, Journal of the American Statistical Association, 108:504, 1339-1349, <a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2013.829001">DOI: 10.1080/01621459.2013.829001</a></p>
+<div id="introduction-2" class="section level3">
 <h3>Introduction</h3>
 <p><a href="https://jgscott.github.io/">Home page of James Scott</a></p>
 <p><a href="https://github.com/jwindle/BayesLogit">R package BayesLogit and Thesis</a></p>
@@ -1122,6 +1107,32 @@ y_{ij}&amp;\sim Bino(1,p_{ij}),\quad p_{ij}=\frac{e^{\psi_{ij}}}{1+e^{\psi_{ij}}
 </div>
 <div id="extensions" class="section level4">
 <h4>6 Extensions</h4>
+</div>
+</div>
+</div>
+<div id="choi-hobert-2013" class="section level2">
+<h2>(Choi &amp; Hobert, 2013)</h2>
+<p>Choi, H. M., &amp; Hobert, J. P. (2013). The Polya-Gamma Gibbs sampler for Bayesian logistic regression is uniformly ergodic. <a href="https://projecteuclid.org/euclid.ejs/1377005819">Electronic Journal of Statistics, 7, 2054-2064.</a></p>
+<div id="introduction-3" class="section level4">
+<h4>1 Introduction</h4>
+</div>
+<div id="polson-scott-and-windles-algorithm" class="section level4">
+<h4>2 Polson, Scott and Windle’s algorithm</h4>
+</div>
+</div>
+<div id="taylor-rodríguez-et-al-2017" class="section level2">
+<h2>(Taylor-Rodríguez et al, 2017)</h2>
+<p>Taylor-Rodríguez, D., Womack, A., Fuentes, C., &amp; Bliznyuk, N. (2017). Intrinsic Bayesian Analysis for Occupancy Models. <a href="https://projecteuclid.org/euclid.ba/1473431536">Bayesian Anal., 12(3), 855-877.</a></p>
+<div id="introduction-4" class="section level3">
+<h3>1 Introduction</h3>
+</div>
+<div id="inference-for-a-single-model" class="section level3">
+<h3>2 Inference for a single model</h3>
+<div id="the-occupancy-model-with-probit-link" class="section level4">
+<h4>2.1 The occupancy model with Probit link</h4>
+</div>
+<div id="an-objective-prior-for-α-λ" class="section level4">
+<h4>2.2 An objective prior for (α, λ)</h4>
 </div>
 </div>
 </div>
