--- a/static/stat501/note_stat501.html
+++ b/static/stat501/note_stat501.html
@@ -363,7 +363,7 @@ summary {
 
 <h1 class="title toc-ignore">Statistical Literature and Problems</h1>
 <h3 class="subtitle">STAT 501</h3>
-<h4 class="date">15 July, 2020</h4>
+<h4 class="date">17 July, 2020</h4>
 
 </div>
 
@@ -1131,9 +1131,77 @@ y_{ij}&amp;\sim Bino(1,p_{ij}),\quad p_{ij}=\frac{e^{\psi_{ij}}}{1+e^{\psi_{ij}}
 <div id="the-occupancy-model-with-probit-link" class="section level4">
 <h4>2.1 The occupancy model with Probit link</h4>
 </div>
-<div id="an-objective-prior-for-α-λ" class="section level4">
-<h4>2.2 An objective prior for (α, λ)</h4>
+<div id="an-objective-prior-for-alphalambda" class="section level4">
+<h4>2.2 An objective prior for <span class="math inline">\(\alpha,\lambda\)</span></h4>
 </div>
+</div>
+</div>
+<div id="model-choices-in-rspm" class="section level2">
+<h2>Model Choices in RSPM</h2>
+<div id="current-greenstep-dvmt-models" class="section level3">
+<h3>3.2 Current GreenSTEP DVMT Models</h3>
+<p>The current household travel model in GreenSTEP has two sequential (conditional) models: a binary model of whether a household will have non-zero daily VMT (Zero DVMT model) and a regression model of the actual daily VMT for households with non-zero VMT (DVMT model).</p>
+<p><span class="math inline">\(\log(odds)=\mathrm{logit}(P) =\ln\left(\frac{P}{1-P}\right)\)</span></p>
+<p>Zero DVMT model: Binomial Logit Models</p>
+<p><span class="math inline">\(\begin{aligned} P(\text{DailyVMT}=0)=&amp;\mathrm{logit}(\text{DrvAgePop+LogIncome+Htpopdn+Age65Plus+Hhvehcnt+ZeroVeh+Tranilescap}\\ &amp;+\text{Urban:Tranmilescap}) \end{aligned}\)</span></p>
+<p>DVMT model: Box–Cox transformation</p>
+<p><span class="math display">\[\begin{aligned}
+(\text{DailyVMT})^{0.18}=&amp;\text{DrvAgePop+LogIncome+Htppopdn+Age65Plus+Hhvehcnt+ZeroVeh+Tranilescap} \\
+&amp;+\text{Census_r+Fwylnmicap+Urban+Htppopdn:Tranmilescap}
+\end{aligned}\]</span></p>
+<p><span style="color: red;">The models are not same with regression tables???</span></p>
+</div>
+<div id="aadvmt-model-power-transformed-linear-regression-model" class="section level3">
+<h3>3.3.1 AADVMT Model (Power-transformed linear regression model)</h3>
+<p><span class="math display">\[\text{AADVMT}_h=\sum_{v_h=0}^{V_h}\text{AVMT}_{v_h}/365=f(\text{SD}_h,\text{BE}_h,\text{TS}_{R_h})\]</span></p>
+<p>AADVMT<span class="math inline">\(_h\)</span> is the annual average daily VMT for household h,</p>
+<p>SD<span class="math inline">\(_h\)</span> represents the demographic and social-demographic characteristics of household h</p>
+<p>BE<span class="math inline">\(_h\)</span> is the built environment variables (of various geographical resolution) of household h, and</p>
+<p>TS<span class="math inline">\(_{R_h}\)</span> is the transportation supply of the region where household h resides</p>
+<p><span class="math inline">\(f(\cdot)\)</span> linear and transformed linear regression models, and a hurdle model</p>
+<p>After comparing all three model structures for predictive accuracy in cross-validation, the power transformed (with <span class="math inline">\(\lambda=0.38\)</span>) linear regression model is chosen.</p>
+<p>The validation results show that the prediction accuracy of new models is better than Combined GreenStep DVMT Models</p>
+<p>Smaller RMSE (Root Mean Squared Error) and larger <span class="math inline">\(R^2\)</span></p>
+</div>
+<div id="person-miles-traveled-pmt-models" class="section level3">
+<h3>3.3.2 Person Miles Traveled (PMT) Models</h3>
+<div id="transit-person-miles-traveled-model-hurdle-model" class="section level4">
+<h4>3.3.2.1 Transit Person Miles Traveled Model (hurdle model)</h4>
+<p>3.3.2.2 Walk Miles Traveled Model (hurdle model)</p>
+<p>3.3.2.3 Bike Miles Traveled Model (hurdle model)</p>
+<p><a href="https://data.library.virginia.edu/getting-started-with-hurdle-models/">Hurdle Models</a></p>
+</div>
+</div>
+<div id="trip-frequency-length-tfl-models" class="section level3">
+<h3>3.4 Trip Frequency-Length (TFL) models</h3>
+<ul>
+<li>3.4.1 Trip Frequency Models</li>
+</ul>
+<p>The trip frequency models of Transit, Bike, and Walk are hurdle models with the dependent variable ( <span class="math inline">\(Trips=zinb(X\beta)\)</span>. <span style="color: red;">???</span></p>
+<ul>
+<li>3.4.2 Average Trip Length Models</li>
+</ul>
+<p><span class="math inline">\((\text{TripMiles})^{0.10}=X\beta\)</span></p>
+<p>In the estimation of TFLM model with NHTS data, it needs to use the trip dataset, which has more than 1 million observations; while in simulation, it requires to create a dataset with one observation for every trip.</p>
+<blockquote>
+<p>Subsampling methods</p>
+</blockquote>
+<p>HaiYing Wang, Rong Zhu &amp; Ping Ma (2018) Optimal Subsampling for Large Sample Logistic Regression, Journal of the American Statistical Association, 113:522, 829-844, <a href="https://doi.org/10.1080/01621459.2017.1292914">DOI: 10.1080/01621459.2017.1292914</a></p>
+</div>
+<div id="total-person-miles-traveled-by-mode-tpmtm-model" class="section level3">
+<h3>3.5.1 Total Person Miles Traveled by Mode (TPMTM) Model</h3>
+<p>The TPMTM model is made up of two sequential models: a Total Person Miles Traveled (TPMT) and a Mode Allocation Model.</p>
+<p>The total person miles traveled is a household level model of total person miles traveled by all household members. It is a linear regression model with total PMT (log or power transformed) as the dependent variable: <span class="math inline">\(\ln(\text{pmt})=X\beta\)</span> or <span class="math inline">\((\text{pmt})^{\lambda}=X\beta\)</span>,</p>
+<p>while the mode allocation model captures the percentage of PMT by modes for households and allocates total PMT to each mode in prediction.</p>
+<p>In estimation, we first choose a base mode, compute the ratio of PMT percentage for all other modes relative to that for the base mode, and then use log of the ratio (i.e., log-odds ratio) as the dependent variable of the mode allocation model. We will estimate <span class="math inline">\(n-1\)</span> models if there are n modes in total. In prediction, we first predict the log-odds ratios from each of the <span class="math inline">\(n-1\)</span> models, exponentiate the predicted log-odds ratios to get odds ratios, and apply the additional condition that the odds for all modes sum up to 1 to get the predicted PMT percentage for each mode. The model structure is consistent with a multinomial logit model that is commonly used in mode choice modeling.</p>
+<p><span class="math display">\[\ln(\frac{P_{Transit}}{P_{Auto}})=X\beta;\quad \ln(\frac{P_{Bike/Walk}}{P_{Auto}})=X\beta\]</span></p>
+<p>The advantage of the TPMTM model is that the model structure is similar to the existing household travel model in GreenSTEP, and consistent with mode choice models in travel demand modeling</p>
+<p>The disadvantages include:</p>
+<ul>
+<li>TPMTM is modeled at an aggregated household level and some of the traveler/trip information that is useful for mode choice modeling is lost. For example, a household will likely have a different probability of choosing walking for 2 trips of half mile each than for 1 trip of 1 mile.</li>
+<li>The NHTS data is dominated by driving when mode shares are measured by distance. The small share of transit and bike/walk mode may bring large variance of the odds ratio variable.</li>
+</ul>
+<p>Finally, special handling is required when any of the shares are 0 among the modes being modeled (Auto, Transit, Bike, Walk), which is common for daily travel.</p>
 </div>
 </div>
 <div id="resources" class="section level2">
